[gd_scene load_steps=4 format=3 uid="uid://n8xp4vssq07m"]

[ext_resource type="Texture2D" uid="uid://dev2mmkurxwq2" path="res://icon.svg" id="1_4ctuo"]
[ext_resource type="Script" uid="uid://comhuyscyfgy7" path="res://Scripts/mementos.gd" id="1_70uma"]
[ext_resource type="Texture2D" uid="uid://b4kwyjycuk578" path="res://Artwork/memento_wall_act_6.png" id="3_h1e4f"]

[node name="Mementos" type="Node2D" node_paths=PackedStringArray("buttons")]
script = ExtResource("1_70uma")
buttons = [NodePath("Denial"), NodePath("Anger"), NodePath("Bargaining"), NodePath("Depression"), NodePath("Acceptance")]

[node name="Denial" type="TextureButton" parent="."]
visible = false
offset_left = 498.0
offset_top = 353.0
offset_right = 626.0
offset_bottom = 481.0
scale = Vector2(1.53737, 0.913484)
texture_normal = ExtResource("1_4ctuo")

[node name="Anger" type="TextureButton" parent="."]
visible = false
offset_left = 185.0
offset_top = 348.0
offset_right = 313.0
offset_bottom = 476.0
scale = Vector2(1.32, 1)
texture_normal = ExtResource("1_4ctuo")

[node name="Bargaining" type="TextureButton" parent="."]
visible = false
offset_left = 130.0
offset_top = 82.0
offset_right = 258.0
offset_bottom = 210.0
texture_normal = ExtResource("1_4ctuo")

[node name="Depression" type="TextureButton" parent="."]
visible = false
offset_left = 861.0
offset_top = 60.0
offset_right = 989.0
offset_bottom = 188.0
scale = Vector2(1.19384, 2.07956)
texture_normal = ExtResource("1_4ctuo")

[node name="Acceptance" type="TextureButton" parent="."]
visible = false
offset_left = 492.0
offset_top = 47.0
offset_right = 620.0
offset_bottom = 175.0
scale = Vector2(1.36, 1)
texture_normal = ExtResource("1_4ctuo")

[node name="MementoWall" type="Sprite2D" parent="."]
position = Vector2(593, 314)
scale = Vector2(9.54167, 8)
texture = ExtResource("3_h1e4f")

[connection signal="pressed" from="Denial" to="." method="_on_denial_pressed"]
[connection signal="pressed" from="Anger" to="." method="_on_anger_pressed"]
[connection signal="pressed" from="Bargaining" to="." method="_on_bargaining_pressed"]
[connection signal="pressed" from="Depression" to="." method="_on_depression_pressed"]
[connection signal="pressed" from="Acceptance" to="." method="_on_acceptance_pressed"]
